Expose ScopedValue internals